--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,9 +1,9 @@
 # Skills
 
-# Education
-- skill: Education
-  description: Developed and maintained various conference talks, online training, and in-person trainings covering various topics including Git, GitHub, and Open Source.
+# Learning
+- skill: Learning
+  description: Have a broad knowledge of various subjects ranging from philosophy, to science, to music, to religion.
 
-# Leadership
-- skill: Leadership
-  description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+# Ultrasound Troubleshooting
+- skill: Ultrasound Troubleshooting
+  description: Ultrasound machines are effectively glorified computers with added functionality for performing ultrasounds.
