--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
+- degree: Github Master  
   uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+  year: January, 2019 &mdash; Now
   # awards:
-  # summary:
+  summary: Master of all things Github.
